fix shadow and add alt text to img

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="h-full w-full bg-[#D6E2F0] pt-[82px] pb-[85px] px-[27px] sm:flex sm:justify-center sm:items-center">
-  <section class="flex flex-col w-full h-full bg-white p-4 rounded-2xl sm:max-w-[320px] sm:max-h-[500px] shadow-xl">
+  <section class="flex flex-col w-full h-full bg-white p-4 rounded-2xl sm:max-w-[320px] sm:max-h-[500px] shadow-2xl">
     <img class="w-full rounded-2xl" src="./images/image-qr-code.png" alt="qr code image">
     <p class="w-full mt-7 font-bold text-center text-xl">
       Improve your front-end<br> skills by building projects
